force-app/main/default/objects/Employee__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to store employee city details.</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>