force-app/main/default/objects/Employee__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is used to store employee country details.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>