force-app/main/default/objects/Employee__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <description>This field is used to give information about employee email address.</description>
    <label>Employee Email</label>
    <type>Email</type>
</CustomField>