force-app/main/default/objects/Employee__c/fields/Employee_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone_Number__c</fullName>
    <description>This field is used to give information about employee phone number details.</description>
    <label>Employee Phone Number</label>
    <type>Phone</type>
</CustomField>