force-app/main/default/objects/Employee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This field is used to store employee state details.</description>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>