force-app/main/default/objects/Employee__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field is used to store employee street details.</description>
    <label>Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>